<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VBooks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="footer_text">Vekomy Technologies Pvt.Ltd 2011 2012. All rights reserved. Copyright Terms and Conditions Contact Us Build: 1.0.4 </string>
    <string name="pleaseLogin">Please Login</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="siteadmin">Site Admin</string>
    <string name="manageOrganization">Manage Organization</string>
    <string name="organizationList">Organization List</string>
    <string name="addOrganization">Add Organization</string>
    <string name="main_branch">Main Branch</string>
    <string name="organization_code">Organization Code</string>
    <string name="organization_name">Organization Name:</string>
    <string name="branch_name">Branch Name</string>
    <string name="description">Description</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="locality">Locality</string>
    <string name="super_username">Super Username:</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="phone_1">Phone 1</string>
    <string name="phone_2">Phone 2</string>
    <string name="phone_3">Phone 3</string>
    <string name="super_password">Password:</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="load">Load Details</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="payment_add_delivery_note">Payment Add Delivery Note</string>
    <string name="sales_add_delivery_note">Sales Add Delivery Note</string>
    <string name="add_sales_return">Add Sales Return</string>
    <string name="add_journal">Add Journal</string>
    <string name="search_day_book">Search Day Book</string>
    <string name="add_day_book">Add Day Book</string>
    <string name="view_delivery_note">View Delivery Note</string>
    <string name="view_sales_returns">View Sales Returns</string>
    <string name="new_customer">New Customer</string>
    <string name="customer_info">Customer Information</string>    
    <string name="business_name">Business Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="customer_name">Customer Name</string>
    <string name="change_request_type">Change Request Type</string>
    <string name="contact_number">Contact Number</string>
    <string name="direct_line">Direct Line</string>
    <string name="region">Region</string>
    <string name="invoice_name">Invoice Name</string>
    <string name="alternate_contact_number">Alternate Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="address_type">Address Type</string>
    <string name="zipcode">Zipcode</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delivery_note">Delivery Note</string>
    <string name="for_payments">For Payments</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="balance">Balance</string>
    <string name="payment_type">Payment Type</string>
    <string name="cash">Cash</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="branch_name1">Branch Name</string>
    <string name="cheque_no">Cheque No</string>
    <string name="bank_name">Bank Name</string>
    <string name="damaged">Damaged</string>
    <string name="resaleable">Resaleable</string>
    <string name="return_qty">Return Quantity</string>
    <string name="cost">Cost</string>    
    <string name="invoice_no">Invoice NO</string>
    <string name="colon">:</string>
	<string name="date">Date</string>
	<string name="sales_executive">Sales Executive</string>
	<string name="customer">Customer</string>
	<string name="salesExecutiveName">sales Executive</string>
	<string name="sno">S NO</string>	
	<string name="bname">Business Name</string>
	<string name="credit">Credit</string>
	<string name="advance">Advance </string>
	<string name="invoiceName">InvoiceName</string>
	<string name="submit">Submit</string>
	<string name="update">Update</string>
	<string name="modifyCust">Modify Custmour</string>
	<string name="salereturn">Sales return</string>
	<string name="generateInvoice">Generate invoice</string>
	<string name="payment">Payment</string>
	<string name="productName">Product Name</string>
	<string name="availableQty">Available Qty</string>
	<string name="productCost">Product Cost</string>
	<string name="requiredQty">Required Qty</string>
	<string name="productQty">Product Qty</string>
    <string name="bonus">Bonus</string>
    <string name="bonusQty">Bonus Qty</string>
    <string name="total_cost">Total Cost</string>
    <string name="bonus_reason">Bonus Reason</string>
	<string-array name="PaymentTypes">
    <item >Cash</item>
    <item >Cheque</item>
    </string-array>
    <string name="grand_toatal">Grand Total :</string>
    <string name="back">Back</string>
    <string name="preview">Preview</string>
    <string name="previous_credit">Previous Credit</string>
    <string name="present_payable">Present Payable</string>
	<string name="present_advance">Advance</string>
    <string name="total_payable">Total Payable</string>
    <string name="present_payment">Present Payment</string>
    <string name="remaining_bal">Balance</string>
    <string name="cheque">Cheque</string>
    <string name="account_no">Branch Name</string>
    <string name="bank">Bank Name</string>
    <string name="positve_sigin">(+)</string>
    <string name="negitive_sigin">(-)</string>
    <string name="equal_sigin">(=)</string>
    <string name="colen_sigin">:</string>
    <string name="zero">0.0</string>
    <string name="invoice">INVOICE</string>
    <string name="sign">( sign )</string>
</resources>