<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >
    
    <RelativeLayout
        android:id="@+id/rlproductlistBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/previous_credit" />
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".05"
                android:text="@string/positve_sigin" />
            <TextView
                android:id="@+id/lblpreviouscredit"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
        </TableRow>

        <TableRow
            android:id="@+id/tr2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tr1"
            android:layout_margin="5dip"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="left"
                android:text="@string/present_payable" />
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".05"
                android:text="@string/positve_sigin" />
            <TextView
                android:id="@+id/lblPresentPay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tr2"
            android:layout_margin="5dip"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/present_advance" />
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".05"
                android:text="@string/negitive_sigin" />
            <TextView
                android:id="@+id/lbladvance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
        </TableRow>

        <TableRow
            android:id="@+id/tr4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tr3"
            android:layout_margin="5dip"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="left"
                android:text="@string/total_payable" />
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".05"
                android:text="@string/equal_sigin" />
            <TextView
                android:id="@+id/lblTotalPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tr6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tr4"
            android:layout_margin="5dip"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/present_payment" />
			<TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".05" />
            <EditText
                android:id="@+id/txPaymentnow"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:maxLength="10"
                android:inputType="number" />

            <Spinner
                android:id="@+id/spinnerPaymentType"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:entries="@array/PaymentTypes" />
        </TableRow>
        
        <TableRow
            android:id="@+id/dynamicRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tr6"
            android:weightSum="1" >

            <EditText
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="center"
                android:hint="@string/cheque"
                android:maxLength="20"
                android:inputType="none" />

            <EditText
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="center"
                android:maxLength="20"
                android:hint="@string/account_no"
                android:inputType="none" />

            <EditText
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="center"
                android:maxLength="20"
                android:hint="@string/bank"
                android:inputType="none" />
        </TableRow>
        <View
            android:id="@+id/viewLine"
            android:layout_width="fill_parent"
            android:layout_height="1.5dip"
            android:layout_below="@id/dynamicRow"
            android:background="@android:drawable/bottom_bar" />        
        <TableRow
            android:id="@+id/tr7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewLine"
            android:layout_margin="5dip"
            android:weightSum="1" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/remaining_bal" />
			<TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".05" />
            <TextView
                android:id="@+id/lblRemaingBal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:layout_weight=".5" />
        </TableRow>

    </RelativeLayout>

</ScrollView>